# java

./: CMakeLists.txt  CppCallJni.cpp  build.bat
c#/: tasks.json
c#/base/: 01hello.cs  02Rect.cs  CMakeLists.txt  MyApp.cs  MyDll.cs  MyQQ.cs  MyThread.cs  MyWin32Api.cs  TCPServer.cs  TcpClient.cs  build.bat  build_vs.bat  build_vscode.sh
c#/email/: CMakeLists.txt  EmailHelper.cs  build_email.bat
c#/excel/: CMakeLists.txt  WebExcel.cs  build_excel.bat
c#/pic/: CMakeLists.txt  ExampleMain.cs  build_vs.bat  build_vscode.sh  pic.csproj
c#/web/: CCTVDownload.cs  CMakeLists.txt  PdfDownload.cs  TsDownload.cs  Web.cs  build_web.bat  build_web.sh
callc/: Android.mk  Application.mk  CMakeLists.txt  CallC.java  ForScanner.java  ForScannerChild.java  TxtParseUtils.java  build.bat  build.sh  com_durongze_jni_CallC.cpp  com_durongze_jni_CallC.h
callc/java/: MyFrame.java  ServerThread.java  SocketClient.java  SocketServer.java  build.bat  build_java.bat
callc/java/base/: ForScannerChild.java
callc/java/pic/: AnimatedGifEncoder.java  DRZNeuQuant.java  GifDecoder.java  GifFrame.java  LZWEncoder.java  MakeOver.java  NeuQuant.java
csharp/: launch.json
csharp/base/: MyApp.cs  MyProcess.cs  MyWin32Api.cs  build_vscode.sh
csharp/email/: build_email.bat
csharp/pic/: CMakeLists.txt  ExampleMain.cs  build_vs.bat  pic.csproj
csharp/web/: CMakeLists.txt
java/: build.bat  build_java.bat  build_java.sh
java/base/: TxtParseUtils.java
java/pic/: AnimatedGifEncoder.java  DRZLZWEncoder.java  GifDecoder.java  GifFrame.java  GifLog.java  MakeOver.java
java/test/: Container.java  EmailHelper.java  Excel.java  FileList.java  MakeAnimatedGifEncoder.java  TestAnimatedGifEncoder.java  Web.java  build_email.bat  build_excel.bat  build_file.bat  build_web.bat  build_web.sh
test/: Container.java  EmailHelper.java  Excel.java  FileList.java  Web.java  build_email.bat  build_excel.bat  build_file.bat  build_web.bat  build_web.sh
